# mettools_xii_paper_monica_simulations

./: .gitignore  crop.json  pyproject.toml  run.py  sim.json  site.json  start_services.sh
climate/: DD-Klotzsche_DS_REFERENZ_TW_2020_1048_1961-01-01_2020-12-31.csv  Gera-Leumnitz_DS_REFERENZ_TW_2020_1612_1961-01-01_2020-12-31.csv  Info Rekis Referenzdaten.xlsx  Laucha-Unstrut_DS_REFERENZ_TW_2020_5424_1961-01-01_2020-12-31.csv  Laucha_DS_REFERENZ_TW_2020_5419_1961-01-01_2020-12-31.csv  Naumburg-Saale-Kreipitzsch_DS_REFERENZ_TW_2020_7420_1961-01-01_2020-12-31.csv  Plauen_DS_REFERENZ_TW_2020_3946_1961-01-01_2020-12-31.csv  Zeitz_DS_REFERENZ_TW_2020_5750_1961-01-01_2020-12-31.csv
monica_parameters/crop-residues/: maize.json
