[tool.poetry]
name = "mettools-xii-paper-monica-simulations"
version = "0.1.0"
description = ""
authors = ["Michael Berg-Mohnicke <michael.berg@zalf.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pycapnp = "^2.0.0"
zalfmas-common = "^0.1.3"
zalfmas-capnpschemas = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
